--- a/src/styles/SharedNotAddedSection.css
+++ b/src/styles/SharedNotAddedSection.css
@@ -3,8 +3,8 @@
   width: 100%;
   background-color: #4A4964;
   align-items: center;
-  border-radius: 0px 0px 15px 15px;
-  padding-bottom: 5%;
+  /* border-radius: 0px 0px 15px 15px; */
+  /* padding-bottom: 5%; */
 }
 
 .BackgroundGradientBlock {
