--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -243,6 +243,8 @@
   padding: 5%;
   justify-content: center;
   align-items: center;
+  border-radius: 0px 0px 15px 15px;
+  /* margin-bottom: 5%; */
 }
 
 .PublicRegisterLoginContainer>span {
