--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -67,6 +67,7 @@
   font-size: 16px;
   font-weight: 600;
   background-color: #7316c6;
+  /* background-color: #66B06E; */
   align-items: center;
   justify-content: center;
   align-items: center;
