--- a/src/styles/GoogleDocInterface.css
+++ b/src/styles/GoogleDocInterface.css
@@ -269,7 +269,7 @@ textarea::-webkit-scrollbar-thumb {
   width: 191px;
 }
 
-.GoogleSignInContainer button {
+/* .GoogleSignInContainer button {
   margin: 0;
   padding: 0;
   width: 191px;
@@ -279,8 +279,64 @@ textarea::-webkit-scrollbar-thumb {
   align-items: center;
   background: none;
   border: none;
-}
+} */
 
 .GITI-Dark {
   background-color: #09090D;
+}
+
+.DriveLogoButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  border: none;
+  background-color: white !important;
+  width: 220px;
+  height: 45px;
+  border-radius: 3px;
+  font-weight: 600;
+  color: #757575;
+
+  position: relative;
+
+}
+
+.DriveLogoButton img {
+  height: 34px;
+  border: 5px;
+  margin-right: 12px;
+}
+
+.DriveTooltipArrow {
+  width: 0; 
+  height: 0; 
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #505475;
+  margin-left: 10px;
+  margin-top: 5px;
+  visibility: hidden;
+}
+
+
+.DriveTooltip {
+  background-color: #505475;
+  visibility: hidden;
+  /* border: 1px solid white; */
+  width: 220px;
+  color: white;
+  font-size: 14px;
+  font-family: "Raleway-Regular";
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.GoogleSignInContainer:hover .DriveTooltip {
+  visibility: visible;
+}
+
+.GoogleSignInContainer:hover .DriveTooltipArrow {
+  visibility: visible;
 }
